Added SQL to languages section in index.html
Also uploaded SQL svg

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             <h5 class="text-center">My favorite languages</h5>
             <div class=" row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/python.svg" height="70px" title="Python" alt="Python logo">
+                    <img src="/assets/images/langs/python.svg" height="70px" title="Python" alt="Python">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/java.svg" height="70px" title="Java" alt="Java logo">
+                    <img src="/assets/images/langs/java.svg" height="70px" title="Java" alt="Java">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/ocaml.svg" height="70px" title="OCaml" alt="OCaml logo">
+                    <img src="/assets/images/langs/ocaml.svg" height="70px" title="OCaml" alt="OCaml">
                 </div>
             </div>
 
@@ -122,23 +122,25 @@
             <h5 class="text-center">Other languages I've used</h5>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/c.svg" height="70px" title="C" alt="C logo">
+                    <img src="/assets/images/langs/c.svg" height="70px" title="C" alt="C">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/rust.svg" height="70px" title="Rust" alt="Rust logo">
+                    <img src="/assets/images/langs/rust.svg" height="70px" title="Rust" alt="Rust">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/ruby.svg" height="70px" title="Ruby" alt="Ruby logo">
+                    <img src="/assets/images/langs/ruby.svg" height="70px" title="Ruby" alt="Ruby">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/html.svg" height="70px" title="HTML5" alt="HTML5 logo">
+                    <img src="/assets/images/langs/html.svg" height="70px" title="HTML5" alt="HTML5">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/css.svg" height="70px" title="CSS3" alt="CSS3 logo">
+                    <img src="/assets/images/langs/css.svg" height="70px" title="CSS3" alt="CSS3">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/javascript.svg" height="70px" title="JavaScript"
-                        alt="JavaScript logo">
+                    <img src="/assets/images/langs/javascript.svg" height="70px" title="JavaScript" alt="JavaScript">
+                </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/langs/sql.svg" height="70px" title="SQL" alt="SQL">
                 </div>
             </div>
 
@@ -147,15 +149,13 @@
             <h5 class="text-center">Frameworks I've used</h5>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/bootstrap.svg" height="70px" title="Bootstrap"
-                        alt="Bootstrap logo">
+                    <img src="/assets/images/frameworks/bootstrap.svg" height="70px" title="Bootstrap" alt="Bootstrap">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/jquery.svg" height="70px" title="jQuery" alt="jQuery logo">
+                    <img src="/assets/images/frameworks/jquery.svg" height="70px" title="jQuery" alt="jQuery">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/plotly.svg" height="70px" title="Plotly.js"
-                        alt="Plotly.js logo">
+                    <img src="/assets/images/frameworks/plotly.svg" height="70px" title="Plotly.js" alt="Plotly.js">
                 </div>
             </div>
 
