Forgot to unstash these - meant to go with previous commit
See previous commit for details

--- a/404.html
+++ b/404.html
@@ -66,7 +66,7 @@
             <!-- href attribute and contents of id="404URL" are filled by 404.js -->
             <p class="text-center">The requested page ( <a id="404URL"></a> ) does not exist</p>
             <p class="text-center">Please enter a valid URL or use the navbar at the top of this page</p>
-            <p class="text-center">If you believe this is in error, please <a
+            <p class="text-center">If you believe this is an error, please <a
                     href="https://github.com/psmit703/personal-website/issues">create an issue in the GitHub repo</a> or
                 email me directly at <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
 
