added to privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -59,12 +59,29 @@
 
         <div class="body-content-custom">
             <h1 class="text-center header-404-custom" style="width: auto">Privacy Policy</h1>
-            <p>While the code I have written for this site ( available here: <a
+            <p>The code I have written for this site ( available here: <a
                     href="https://github.com/psmit703/personal-website/tree/main">github.com/psmit703/personal-website/tree/main</a>
-                ) does not store, collect, or
-                otherwise process any user data and does not use cookies, this site makes use of various third party
-                software that may do so. The following are (short) summaries of relevant privacy statements and
-                links to their respective privacy policies, where applicable:</p>
+                ) makes limited use of non-identifiable information:
+            <ul>
+                <li>The <a href="https://www.psmit.dev">Home Page</a> uses JavaScript to determine the height and width
+                    (in pixels) of the
+                    user's browser window in order to determine whether or not to display an image. If the aspect ratio
+                    is too small, then no image is displayed. This is done to create, in my opinion, a better aesthetic
+                    on mobile devices. All of the processing is done by the user's browser and nothing is stored or sent
+                    back to me (Pete Smith) in any form.
+                </li>
+                <li>The <a href="https://www.psmit.dev/404.html">Error 404 Page</a> uses JavaScript to determine the URL
+                    that a user has inputted. As this page is an error page, the URL is used in a message displayed to
+                    the user. All of the processing is done by the user's browser and nothing is stored or sent back to
+                    me (Pete Smith) in any form.
+                </li>
+            </ul>
+            The code I have written does not otherwise process, store, or use any user data in any form and does not use
+            cookies.
+            However, this
+            site makes use of various third party
+            software that may do so. The following are short summaries of relevant privacy statements and
+            links to their respective privacy policies, where applicable:</p>
             <ul>
                 <li><a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Bootstrap</a>
                     <ul>
@@ -99,7 +116,7 @@
                                             as
                                             IP addresses and browser information through the use of cookies, web
                                             beacons,
-                                            and "other technologies," along with collecting de-identifiged
+                                            and "other technologies," along with collecting de-identified
                                             information
                                             for
                                             analysis and improvement purposes</li>
