canonical link fix for privacy.html, minor text change in index.html

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
                                 <li>Code maintability (comments, modularity, etc.)</li>
                             </ul>
                         </li>
-                        <li>I am the (self-proclaimed) best ping pong player in the world (I am willing to defend this
-                            title)
+                        <li>I am the (self-proclaimed) best ping pong player in the world
+                            <ul>
+                                <li>I am willing to defend this title
+                                </li>
+                            </ul>
                         </li>
                         <li>I am in a never-ending search of the best breakfast sandwich in the DC area</li>
                     </ul>
