--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Pete Smith">
 
     <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://www.psmit.dev/">
+    <link rel="canonical" href="https://www.psmit.dev/privacy.html">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
