--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-home-custom" href="/">Home</a>
                     </li>
-                    <li class="nav-item ml-2">
+                    <li class="nav-item mx-2">
                         <a class="nav-link nav-resume-custom" href="/resume.html">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
