--- a/writing.html
+++ b/writing.html
@@ -39,7 +39,7 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-home-custom" href="/">Home<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item ml-2">
+                    <li class="nav-item mx-2">
                         <a class="nav-link nav-resume-custom" href="/resume.html">Résumé</a>
                     </li>
                     <li class="nav-item mx-2">
