index.html - added to about me

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>My favorite word is "whatnot"</li>
                         <li>I am in a never-ending search of the best breakfast sandwich in the DC area</li>
                     </ul>
                     </p>
