--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- custom stylesheet across subpages -->
     <link rel="stylesheet" href="/assets/css/styles.css">
 
+    <!-- navbar button script -->
+    <script defer src="/assets/js/navbar-button.js"></script>
+
     <!-- random image script -->
     <script defer src="/assets/js/random-image.js"></script>
 </head>
@@ -160,8 +163,8 @@
             <hr />
 
             <div class="links-custom mx-5 my-5">
-                <h5>Want to contact me, see my professional profiles, or challenge me to a game of ping pong? Look
-                    below!</h5>
+                <h4>Want to contact me, see my professional profiles, or challenge me to a game of ping pong? Look
+                    below!</h4>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm col-custom">
