--- a/writing.html
+++ b/writing.html
@@ -18,6 +18,9 @@
 
     <!-- custom stylesheet across subpages -->
     <link rel="stylesheet" href="/assets/css/styles.css">
+
+    <!-- navbar button script -->
+    <script defer src="/assets/js/navbar-button.js"></script>
 </head>
 
 <body>
