Added navbar-scroll.js - makes navbar invisible when scrolling down
Added navbar-scroll.js - when scrolling down, the navbar now disappears. When scrolling back up, it reappears. If the site is in mobile format and the dropdown menu is down, then the navbar will not disappear no matter what.

--- a/coding.html
+++ b/coding.html
@@ -21,6 +21,9 @@
 
     <!-- navbar button script -->
     <script defer src="/assets/js/navbar-button.js"></script>
+
+    <!-- navbar scroll script -->
+    <script defer src="/assets/js/navbar-scroll.js"></script>
 </head>
 
 <body>
