--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <!-- navbar button script -->
     <script defer src="/assets/js/navbar-button.js"></script>
 
+    <!-- navbar scroll script -->
+    <script defer src="/assets/js/navbar-scroll.js"></script>
+
     <!-- random image script -->
     <script defer src="/assets/js/random-image.js"></script>
 </head>
