--- a/404.html
+++ b/404.html
@@ -26,6 +26,9 @@
 
     <!-- navbar button script -->
     <script defer src="/assets/js/navbar-button.js"></script>
+
+    <!-- navbar scroll script -->
+    <script defer src="/assets/js/navbar-scroll.js"></script>
 </head>
 
 <body>
