--- a/writing.html
+++ b/writing.html
@@ -21,6 +21,9 @@
 
     <!-- navbar button script -->
     <script defer src="/assets/js/navbar-button.js"></script>
+
+    <!-- navbar scroll script -->
+    <script defer src="/assets/js/navbar-scroll.js"></script>
 </head>
 
 <body>
