Started work on dark-mode.js, added script to each html file
dark-mode.js will handle dark mode, including initialization based on device/browser settings. It will also have a toggle button.

--- a/coding.html
+++ b/coding.html
@@ -24,6 +24,9 @@
 
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
+
+    <!-- dark mode script -->
+    <script defer src="/assets/js/dark-mode.js"></script>
 </head>
 
 <body>
