--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
 
+    <!-- dark mode script -->
+    <script defer src="/assets/js/dark-mode.js"></script>
+
     <!-- random image script -->
     <script defer src="/assets/js/random-image.js"></script>
 </head>
@@ -65,6 +68,8 @@
     <div class="container">
 
         <div class="body-content-custom">
+
+            <btn id="dark-mode-btn">Dark mode button</btn>
 
             <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
 
