--- a/404.html
+++ b/404.html
@@ -29,6 +29,9 @@
 
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
+
+    <!-- dark mode script -->
+    <script defer src="/assets/js/dark-mode.js"></script>
 </head>
 
 <body>
