--- a/privacy.html
+++ b/privacy.html
@@ -25,6 +25,9 @@
 
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
+
+    <!-- dark mode script -->
+    <script defer src="/assets/js/dark-mode.js"></script>
 </head>
 
 <body>
