--- a/writing.html
+++ b/writing.html
@@ -24,6 +24,9 @@
 
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
+
+    <!-- dark mode script -->
+    <script defer src="/assets/js/dark-mode.js"></script>
 </head>
 
 <body>
