--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="#">
                 <img src="/assets/images/site-logo-1080.jpeg" width="50" height="50"
@@ -116,13 +116,14 @@
             <h4 class="text-center">My favorite languages</h4>
             <div class=" row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/python.svg" height="70px" title="Python" alt="Python">
+                    <img src="/assets/images/langs/python.svg" class="langSVG" height="70px" title="Python"
+                        alt="Python">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/java.svg" height="70px" title="Java" alt="Java">
+                    <img src="/assets/images/langs/java.svg" class="langSVG" height="70px" title="Java" alt="Java">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/ocaml.svg" height="70px" title="OCaml" alt="OCaml">
+                    <img src="/assets/images/langs/ocaml.svg" class="langSVG" height="70px" title="OCaml" alt="OCaml">
                 </div>
             </div>
 
@@ -131,25 +132,26 @@
             <h4 class="text-center">Other languages I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/c.svg" height="70px" title="C" alt="C">
+                    <img src="/assets/images/langs/c.svg" class="langSVG" height="70px" title="C" alt="C">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/rust.svg" height="70px" title="Rust" alt="Rust">
+                    <img src="/assets/images/langs/rust.svg" class="langSVG" height="70px" title="Rust" alt="Rust">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/ruby.svg" height="70px" title="Ruby" alt="Ruby">
+                    <img src="/assets/images/langs/ruby.svg" class="langSVG" height="70px" title="Ruby" alt="Ruby">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/html.svg" height="70px" title="HTML5" alt="HTML5">
+                    <img src="/assets/images/langs/html.svg" class="langSVG" height="70px" title="HTML5" alt="HTML5">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/css.svg" height="70px" title="CSS3" alt="CSS3">
+                    <img src="/assets/images/langs/css.svg" class="langSVG" height="70px" title="CSS3" alt="CSS3">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/javascript.svg" height="70px" title="JavaScript" alt="JavaScript">
+                    <img src="/assets/images/langs/javascript.svg" class="langSVG" height="70px" title="JavaScript"
+                        alt="JavaScript">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/sql.svg" height="70px" title="SQL" alt="SQL">
+                    <img src="/assets/images/langs/sql.svg" class="langSVG" height="70px" title="SQL" alt="SQL">
                 </div>
             </div>
 
@@ -158,13 +160,16 @@
             <h4 class="text-center">Frameworks I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/bootstrap.svg" height="70px" title="Bootstrap" alt="Bootstrap">
+                    <img src="/assets/images/frameworks/bootstrap.svg" class="langSVG" height="70px" title="Bootstrap"
+                        alt="Bootstrap">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/jquery.svg" height="70px" title="jQuery" alt="jQuery">
+                    <img src="/assets/images/frameworks/jquery.svg" class="langSVG" height="70px" title="jQuery"
+                        alt="jQuery">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/plotly.svg" height="70px" title="Plotly.js" alt="Plotly.js">
+                    <img src="/assets/images/frameworks/plotly.svg" class="langSVG" height="70px" title="Plotly.js"
+                        alt="Plotly.js">
                 </div>
             </div>
 
@@ -178,7 +183,7 @@
                         <div class="col-sm col-custom">
                             <a href="mailto:psmit703@outlook.com">
                                 <svg xmlns="https://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
-                                    class="bi bi-envelope-at each-link-custom" viewBox="0 0 16 16">
+                                    class="bi bi-envelope-at each-link-custom contactSVG" viewBox="0 0 16 16">
                                     <path
                                         d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z" />
                                     <path
@@ -189,7 +194,7 @@
                         <div class="col-sm col-custom">
                             <a href="https://github.com/psmit703">
                                 <svg xmlns="https://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
-                                    class="bi bi-github each-link-custom" viewBox="0 0 16 16">
+                                    class="bi bi-github each-link-custom contactSVG" viewBox="0 0 16 16">
                                     <path
                                         d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                                 </svg>github.com/psmit703
@@ -198,7 +203,7 @@
                         <div class="col-sm col-custom">
                             <a href="https://www.linkedin.com/in/petesmith-umd/">
                                 <svg xmlns="https://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
-                                    class="bi bi-linkedin each-link-custom" viewBox="0 0 16 16">
+                                    class="bi bi-linkedin each-link-custom contactSVG" viewBox="0 0 16 16">
                                     <path
                                         d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
                                 </svg>in/petesmith-umd
@@ -211,7 +216,7 @@
 
 
             <hr />
-            <footer class="footer text-muted text-center">
+            <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy Policy</a></p>
