--- a/privacy.html
+++ b/privacy.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">
                 <!-- NEED MORE SIZES FOR LOGO -->
