Added dark mode button w/ animations, added cookies for remembering preferences
Added dark mode button animations. Works the same as navbar re: scroll position and mouse position, except mouse position relies on being on the left side of the screen instead of the top of the screen.

Added cookies to remember dark mode preferences. Cookies are deleted if dark mode is toggled off.

--- a/404.html
+++ b/404.html
@@ -67,6 +67,9 @@
         </div>
     </nav>
 
+    <div id="dark-mode-btn">
+        <input id="btn-circle" type="button"></input>
+    </div>
 
     <div class="container">
 
@@ -81,7 +84,7 @@
 
             <hr />
 
-            <footer class="footer text-muted text-center">
+            <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
