--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
         </div>
     </nav>
 
+    <div id="dark-mode-btn">
+        <input id="btn-circle" type="button"></input>
+    </div>
 
     <div class="container">
 
         <div class="body-content-custom">
 
-            <btn id="dark-mode-btn">Dark mode button</btn>
+
 
             <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
 
