--- a/coding.html
+++ b/coding.html
@@ -61,6 +61,9 @@
         </div>
     </nav>
 
+    <div id="dark-mode-btn">
+        <input id="btn-circle" type="button"></input>
+    </div>
 
     <div class="container">
         <div class="body-content-custom">
@@ -71,7 +74,7 @@
 
 
             <hr />
-            <footer class="footer text-muted text-center">
+            <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
