Resume overhaul - switched to text-based rather than PDF embeds
Removed Adobe PDF Embed API. It was too clunky, slow, and made testing miserable.

This new version will need to be manually updated whenever I update my resume.

--- a/resume.html
+++ b/resume.html
@@ -62,67 +62,181 @@
     <div class="container">
         <div class="body-content-custom">
 
-            <div class="card mx-auto">
-                <h4 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">
-                    Technical Résumé |
-                    <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
-                        Download</a>
-                </h4>
-                <div id="technical-resume-custom" style="height: 660px; margin: auto;"></div>
-                <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
-                <script type="text/javascript">
-                    document.addEventListener("adobe_dc_view_sdk.ready", function () {
-                        var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "technical-resume-custom" });
-                        adobeDCView.previewFile(
-                            {
-                                content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Technical).pdf" } },
-                                metaData: { fileName: "Pete Smith Résumé (Technical)", hasReadOnlyAccess: true }
-                            },
-                            {
-                                embedMode: "IN_LINE",
-                                showFullScreen: true,
-                                showDownloadPDF: true,
-                                showPrintPDF: true
-                            }
 
-                        );
-                    });
-                </script>
-                <div style="height: 25px; margin: 8px 0 0;"></div>
-            </div>
+            <h3 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">
+                Technical Résumé |
+                <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
+                    Download</a>
+            </h3>
+
+            <hr style="opacity: 0; margin: 20px 0 20px" />
+
+            <h3 class="text-center">Pete Smith</h3>
+            <p class="text-center">(443) 254-2441 | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> |
+                Washington, D.C. Area</p>
+            <p class="text-center"><a href="https://github.com/psmit703">github.com/psmit703</a> | <a
+                    href="https://www.linkedin.com/in/petesmith-umd/">linkedin.com/in/petesmith-umd</a></p>
+
+            <h4>Education</h4>
+            <ul>
+                <li><strong>University of Maryland, College Park<span style="float: right">(Aug 2019 -
+                            Present)</span></strong></li>
+                <ul>
+                    <li>Bachelor of Science, Computer Science; Bachelor of Arts, History; Minor, Trumpet Performance
+                    </li>
+                    <li>Diploma Expected Dec 2024</li>
+                    <li>Cumulative GPA: 3.356 (May 2023)</li>
+                    <li>Relevant Coursework: CMSC421 - Intro to AI; CMSC420 - Advanced Data Structures; CMSC351
+                        - Algorithms; CMSC330 - Organization of Programming Languages</li>
+                    <li>Member: History Undergraduate Association</li>
+                </ul>
+            </ul>
+
+            <h4>Skills and Attributes</h4>
+            <ul>
+                <li>Languages: Python, Java, C, Rust, Ruby, OCaml, HTML, CSS, JavaScript, SQL</li>
+                <li>Frameworks: Bootstrap, jQuery, Plotly.js</li>
+                <li>Tools and Environments: UNIX, VS Code, Eclipse IDE</li>
+                <li>Coding Skills: Debugging, good code readability, version control</li>
+                <li>Other Skills: Written and oral communication, teamwork, critical thinking, customer service</li>
+            </ul>
+
+            <h4>Programming Projects</h4>
+            <ul>
+                <li><strong>Personal Website (HTML, CSS, JS)<span style="float: right">Personal Project, Jun 2023 -
+                            Present</span></strong></li>
+                <ul>
+                    <li>Designing a personal website ( <a href="https://psmit.dev/">https://www.psmit.dev</a> ) with
+                        focuses on user experience and mobile readiness</li>
+                    <li>Using Bootstrap, JS, and Adobe's PDF Embed API to implement desired functionality</li>
+                </ul>
+                <li><strong>Pacman-Ghostbusters (Python)<span style="float: right">CMSC421, Spring 2023,
+                            UMD</span></strong></li>
+                <ul>
+                    <li>Implemented several functions relating to Bayes' Nets</li>
+                    <li>Functions involved calculating probabilities from given data, updating belief distributions
+                        across various conditions, particle filters, and joint distributions</li>
+                    <li>From UC Berkeley's CS188 Project 4</li>
+                </ul>
+                <li><strong>Reinforcement Learning (Python)<span style="float: right">CMSC421, Spring 2023,
+                            UMD</span></strong></li>
+                <ul>
+                    <li>Implemented Value Iteration (batch, async., and priporitized), Q-Learning, Epsilon Greedy, and
+                        Approximate Q-Learning algorithms</li>
+                    <li>Specified values for Discount, Noise, Living Reward, Epsilon, and Learning Rate for simulations
+                    </li>
+                    <li>From UC Berkeley's CS188 Project 3</li>
+                </ul>
+            </ul>
+
+            <h4>Work Experience</h4>
+            <ul>
+                <li><strong>Web Development Intern (NASA PDS-SBN at Univ. of Maryland)<span style="float: right">(Jun
+                            2023 -
+                            Present)</span></strong></li>
+                <ul>
+                    <li>Creating a comet statistic site for the NASA Planetary Data System-Small Bodies Node at UMD</li>
+                    <li>Designing frontend using HTML, CSS, JS, and various frameworks to create a seamless user
+                        experience</li>
+                    <li>Implementing backend using Python to create an automated script that pulls from multiple
+                        databases usin HTTP requests and a Postgres Python library</li>
+                </ul>
+            </ul>
+
 
             <hr />
 
-            <div class="card mx-auto">
-                <h4 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">Humanities
-                    Résumé |
-                    <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
-                        Download</a>
-                </h4>
-                <div id="humanities-resume-custom" style="height: 660px; margin: auto;"></div>
-                <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
-                <script type="text/javascript">
-                    document.addEventListener("adobe_dc_view_sdk.ready", function () {
-                        var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "humanities-resume-custom" });
-                        adobeDCView.previewFile(
-                            {
-                                content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Humanities).pdf" } },
-                                metaData: { fileName: "Pete Smith Résumé (Humanities)", hasReadOnlyAccess: true }
-                            },
-                            {
-                                embedMode: "IN_LINE",
-                                showFullScreen: true,
-                                showDownloadPDF: true,
-                                showPrintPDF: true
-                            }
+            <h3 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">Humanities
+                Résumé |
+                <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
+                    Download</a>
+            </h3>
 
-                        );
-                    });
-                </script>
-                <div style="height: 25px; margin: 8px 0 0;"></div>
-            </div>
+            <hr style="opacity: 0; margin: 20px 0 20px" />
+
+            <h3 class="text-center">Pete Smith</h3>
+            <p class="text-center">(443) 254-2441 | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> |
+                Washington, D.C. Area | <a
+                    href="https://www.linkedin.com/in/petesmith-umd/">linkedin.com/in/petesmith-umd</a></p>
+
+            <h4>Education</h4>
+            <ul>
+                <li><strong>University of Maryland, College Park<span style="float: right">(Aug 2019 -
+                            Present)</span></strong></li>
+                <ul>
+                    <li>Bachelor of Arts, History; Bachelor of Science, Computer Science; Minor, Trumpet Performance
+                    </li>
+                    <li>Diploma Expected Dec 2024</li>
+                    <li>Cumulative GPA: 3.356 (May 2023)</li>
+                    <li>Relevant Coursework: HIST354 - Antebellum America (1815-1861); HIST357 - Recent America
+                        (1945-Present); HIST429A - Sex and Class in Victorian Britain; HIST319R - Genghis Khan and the
+                        Mongols</li>
+                    <li>Member: History Undergraduate Association</li>
+                </ul>
+            </ul>
+
+            <h4>Skills and Attributes</h4>
+            <ul>
+                <li>Skills: Written and oral communication, critical thinking, research, teamwork, customer service</li>
+                <li>Attributes: Punctual, efficient, organized</li>
+                <li>Software: Proficient in Microsoft Office and Google Docs Suites</li>
+                <li>Other Skills: Programming languages - Python, Java, C, Rust, HTML, CSS, JavaScript, SQL</li>
+            </ul>
+
+            <h4>Selected Papers</h4>
+            <ul>
+                <li><strong>"<i>American Notes</i>: Exploring Antebellum Institutionalism"<span
+                            style="float: right">HIST354,
+                            Spring 2023, UMD</span></strong></li>
+                <ul>
+                    <li>In the context of the critiques in Charles Dickens' American Notes, this paper examines a
+                        variety of
+                        institutions central to Antebellum America. The paper explores the nature of institutions
+                        including
+                        slavery, prison reform, and mental asylums, contextualized by other contemporary and modern
+                        authors
+                        including Alexis de Tocqueville and David J. Rothman, in order to show these institutions' roles
+                        in the
+                        rapidly increasing societal division seen at the time.
+                    </li>
+                </ul>
+                <li><strong>"Masculinity in Victorian Britain"<span style="float: right">HIST429A, Fall 2022,
+                            UMD</span></strong></li>
+                <ul>
+                    <li>This paper explores the various elements of what it meant to be masculine in Victorian Britain,
+                        namely
+                        control of oneself and one's environment and the physical strength that was required. By
+                        examining
+                        contemporary and modern sources including Rudyard Kipling's “William the Conqueror” and Nadja
+                        Durbach's “Monstrosity, Masculinity, and Medicine,” the paper shows how systemic masculinity was
+                        spread and how it was both accepted and challenged throughout society.
+                    </li>
+                </ul>
+            </ul>
+
+            <h4>Work Experience</h4>
+            <ul>
+                <li><strong>Web Development Intern (Univ. of Maryland)<span style="float: right">(Jun 2023 -
+                            Present)</span></strong></li>
+                <ul>
+                    <li>Creating a comet info page for UMD's Minor Planet Center Annex</li>
+                    <li>Combining several software suites to create a seamless user experience with desired
+                        functionality</li>
+                    <li>Requires strong teamwork and communication skills; involves significant collaboration with
+                        supervisor and the overall team</li>
+                </ul>
+                <li><strong>Crew Member (McDonald's)<span style="float: right">(Jun 2022 -
+                            Aug 2022)</span></strong></li>
+                <ul>
+                    <li>Delivered quick, friendly customer service taking orders and payments for afternoon and night
+                        shifts</li>
+                    <li>Assisted with maintaining store cleanliness in line with company standards</li>
+                    <li>Required good teamwork and communication to ensure smooth operation</li>
+                </ul>
+            </ul>
 
             <hr />
+
             <footer class="footer text-muted text-center">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
