--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@
 
     <div class="container">
         <div class="body-content-custom">
-          
+
             <h3 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">
                 Technical Résumé |
                 <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
@@ -153,7 +153,7 @@
 
             <h3 class="text-center" style="height: 45px; top: 50%; transform: translateY(25%);">Humanities
                 Résumé |
-                <a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Direct
+                <a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Direct
                     Download</a>
             </h3>
 
