--- a/resume.html
+++ b/resume.html
@@ -242,7 +242,7 @@
 
             <hr />
 
-            <footer class="footer text-muted text-center">
+            <footer class="footer text-muted text-center" id="footer">
 
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
