Added feature to delete cookies
New script ( delete-cookies.js ) deletes all cookies when the "Delete All Cookies" option at the bottom of any page is clicked

--- a/404.html
+++ b/404.html
@@ -27,11 +27,14 @@
     <!-- navbar button script -->
     <script defer src="/assets/js/navbar-button.js"></script>
 
+    <!-- dark mode script -->
+    <script defer src="/assets/js/dark-mode.js"></script>
+
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
 
-    <!-- dark mode script -->
-    <script defer src="/assets/js/dark-mode.js"></script>
+    <!-- delete all cookies script -->
+    <script defer src="/assets/js/delete-cookies.js"></script>
 </head>
 
 <body>
@@ -89,6 +92,7 @@
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
                         Policy</a></p>
+                <p id="delete-cookies-wrapper"><a href="#" id="delete-cookies">Delete All Cookies</a></p>
             </footer>
         </div>
     </div>
