--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
     <!-- navbar button script -->
     <script defer src="/assets/js/navbar-button.js"></script>
 
-    <!-- navbar scroll script -->
-    <script defer src="/assets/js/navbar-scroll.js"></script>
-
     <!-- dark mode script -->
     <script defer src="/assets/js/dark-mode.js"></script>
 
+    <!-- navbar scroll script -->
+    <script defer src="/assets/js/navbar-scroll.js"></script>
+
     <!-- random image script -->
     <script defer src="/assets/js/random-image.js"></script>
+
+    <!-- delete all cookies script -->
+    <script defer src="/assets/js/delete-cookies.js"></script>
 </head>
 
 <body>
@@ -223,6 +226,7 @@
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy Policy</a></p>
+                <p id="delete-cookies-wrapper"><a href="#" id="delete-cookies">Delete All Cookies</a></p>
             </footer>
         </div>
     </div>
