--- a/privacy.html
+++ b/privacy.html
@@ -23,11 +23,14 @@
     <!-- navbar button script -->
     <script defer src="/assets/js/navbar-button.js"></script>
 
+    <!-- dark mode script -->
+    <script defer src="/assets/js/dark-mode.js"></script>
+
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
 
-    <!-- dark mode script -->
-    <script defer src="/assets/js/dark-mode.js"></script>
+    <!-- delete all cookies script -->
+    <script defer src="/assets/js/delete-cookies.js"></script>
 </head>
 
 <body>
@@ -278,6 +281,7 @@
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a href="#">Privacy
                         Policy</a></p>
+                <p id="delete-cookies-wrapper"><a href="#" id="delete-cookies">Delete All Cookies</a></p>
             </footer>
         </div>
     </div>
