Fixed some bugs re: delete cookies option

--- a/coding.html
+++ b/coding.html
@@ -82,7 +82,8 @@
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
                         Policy</a></p>
-                <p id="delete-cookies-wrapper"><a href="#" id="delete-cookies">Delete All Cookies</a></p>
+                <p class="justify-content-center" id="delete-cookies-wrapper"><span id="delete-cookies">Delete All
+                        Cookies</span></p>
             </footer>
         </div>
     </div>
