--- a/resume.html
+++ b/resume.html
@@ -251,7 +251,7 @@
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/privacy.html">Privacy
                         Policy</a></p>
-                <p id="delete-cookies-wrapper"><a href="#" id="delete-cookies">Delete All Cookies</a></p>
+                <p id="delete-cookies-wrapper"><span id="delete-cookies">Delete All Cookies</span></p>
             </footer>
         </div>
     </div>
